# cpp-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  output  run.sh
01_Basics/: README.md  basics.cpp  index.html
Derivatives/: CMakeLists.txt  Derivatives.cpp
HelloOpenCV/: CMakeLists.txt  HelloOpenCV.cpp
ImageTransformations/: CMakeLists.txt  ImageTransformations.cpp
Morphology/: CMakeLists.txt  Morphology.cpp
SimpleTransformation/: CMakeLists.txt
Smoothing/: Smoothing.cpp
design_patterns/: command.cpp  decorator.cpp  factory_method.cpp  observer.cpp  strategy.cpp
exercism/hello_world/: hello_world_test.cpp
exercism/isogram/: isogram.cpp  isogram_tests.cpp
exercism/leap/: leap.cpp  leap.hpp
exercism/protein_translation/: protein_translation.cpp  protein_translation_tests.cpp
exercism/raindrops/: CMakeLists.txt  raindrops.hpp  raindrops_test.cpp
exercism/reverse_string/: reverse_string.cpp  reverse_string_test.cpp
exercism/triangle/: CMakeLists.txt
grains/: CMakeLists.txt  grains.cpp  grains.hpp  grains_test.cpp
hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.hpp
isogram/: CMakeLists.txt  isogram.hpp
leap/: CMakeLists.txt  leap_test.cpp
leetscode/: conanfile.txt
opencv/SimpleTransformation/: SimpleTransformation.cpp
opencv/Smoothing/: CMakeLists.txt
protein_translation/: CMakeLists.txt  protein_translation.hpp
raindrops/: raindrops.cpp
reverse_string/: CMakeLists.txt  reverse_string.hpp
src/: CMakeLists.txt  PalindromeNumber.cpp  SpiralMatrix.cpp  mostFrequentElement.cpp  solution1.cpp
strong_type/: strong_type_example.cpp  template_tag_example.md
tdd/: CMakeLists.txt
tdd/inc/: calculator.hpp  calculator_interface.hpp
tdd/src/: calculator.cpp
tdd/tests/: calculator_mock.hpp  test_calculator.cpp  test_calculator_gtest.cpp
triangle/: triangle.cpp  triangle.hpp  triangle_test.cpp
